# Final-Project-Carbon-dioxide-emission

./: Final-Project-Carbon-emission-Proposal.ipynb  README.md  SAGDP1__ALL_AREAS_2017_2022.csv  carbon_emission.ipynb  pyproject.toml
src/carbon_emission/: __main__.py  data_prep.py  eda.py  prepped.py  results.py
