[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "carb_ems"
authors = [
    {name = "Ruoyu Chen", email = "rchen2@mail.yu.edu"},
    {name = "Wei Lo", email = "wlo@mail.yu.edu"},
    {name = "Zhengnan Li", email = "zli6@mail.yu.edu"}
]
maintainers = [
    {name = "Ruoyu Chen", email = "rchen2@mail.yu.edu"},
    {name = "Wei Lo", email = "wlo@mail.yu.edu"},
    {name = "Zhengnan Li", email = "zli6@mail.yu.edu"}
]
description = "Carbon emission analysis: Final project for Analytics Programming"
readme = "README.md"
keywords = ["data visualization", "Carbon emission", "Analytics Programming"]
license = {text = "MIT License"}
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.3",
    "numpy>=1.20",
    "pandas>=1.4",
    "requests>=2.27.1",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3"
]
version="0.1"

[project.urls]
Repository = "https://github.com/Zhengnan817/Final-Project-Carbon-emission"


[tool.setuptools.packages.find]
where = ["src"]